--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
         <section id="routine" class="mb-16">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-teal-800">দৈনিক রুটিন ও সময় বন্টন</h2>
+                <h4 class="text-2xl font-bold text-teal-800">নওশেদ আহমেদ ঝলক</h4>
                 <p class="mt-4 text-lg text-stone-600">
-                    এই ড্যাশবোর্ডটি আপনার নির্ধারিত রুটিনকে একটি ইন্টারেক্টিভ উপায়ে উপস্থাপন করে। এখানে আপনি আপনার সময় বন্টনের একটি চিত্র দেখতে পাবেন এবং বর্তমানে কোন কাজটি চলছে তা স্বয়ংক্রিয়ভাবে হাইলাইট হবে।
+                    এই ড্যাশবোর্ডটি আমার নির্ধারিত রুটিনকে একটি ইন্টারেক্টিভ উপায়ে উপস্থাপন করে। এখানে আমি আমার সময় বন্টনের একটি চিত্র দেখতে পারি এবং বর্তমানে কোন কাজটি চলছে তা স্বয়ংক্রিয়ভাবে হাইলাইট হয়ে থাকে।
                 </p>
             </div>
 
@@ -110,7 +111,7 @@
     
     <footer class="bg-white mt-16">
         <div class="max-w-6xl mx-auto py-6 px-4 sm:px-6 lg:px-8 text-center text-stone-500">
-            <p>&copy; <span id="year"></span> আপনার ব্যক্তিগত ড্যাশবোর্ড।</p>
+            <p>&copy; <span id="year"></span> আমার ব্যক্তিগত ড্যাশবোর্ড।</p>
         </div>
     </footer>
 
